--- a/css/default.css
+++ b/css/default.css
@@ -6,7 +6,7 @@ body {
     padding: 0;
     font-family: "open_sansregular", Arial, 'sans serif';
 }
-div {
+.content-wrapper {
     background-color: #EEE;
 }
 header {
