--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,7 +1,7 @@
 html {
     background-color: #666;
 }
-div {
+.content-wrapper {
     position: relative;
     margin: 10px auto;
     max-width: 95%;
