--- a/css/desktop.css
+++ b/css/desktop.css
@@ -34,6 +34,7 @@ nav {
     background-color: #444;
     color: #EEE;
     font-weight: bold;
+    border-radius: 25px;
 }
 .content-wrapper {
     max-width: 864px;
