added sticky header

--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -5,13 +5,45 @@ header
   text-align center
 
   .content-title
+
+    span
+      display block
+
+
+    @media screen and (min-width: 980px)
+        box-shadow 0 12px 30px -15px rgba(0, 0, 0, 0.8)
+
     margin 45px 0
     padding 10px 0
     border-top 1px solid #000
     border-bottom 1px solid #000
+    background #fff
+
+.content-title.sticky
+  top 0
+  position fixed
+  width 100%
+  margin 0
+  border-top 0
+  font-size 12px
 
   h2
-    margin-top 0
+    margin 0
+
+  span
+    display inline
+
+    &:not(:last-child):after
+      content "-"
+      padding 0 5px
+
+  @media screen and (min-width: 980px)
+    h2
+      display inline-block
+
+      &:after
+        content "~"
+        padding 0 5px
 
 main
   padding 15px
@@ -21,9 +53,8 @@ main
     margin auto
     padding 30px 60px
 
-  @media screen and (min-width: 980px)
-    box-shadow 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset
-
-main
   p:first-of-type
     text-indent 50px
+
+  @media screen and (min-width: 980px)
+    box-shadow 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset
